syntax = "proto3";

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "rpc_update_user.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "rpc_verify_email.proto";

package pb;
// 生成的go文件
option go_package = "github.com/techschool/simplebank/pb";

// 生成的swagger文件
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Simple Bank API";
    version: "1.2";
    contact: {
      name: "TechSchool";
      url: "https://github.com/techschool";
      email: "none@gmail.com";
    };
  };
};

service SimpleBank {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        // gRPC方法映射到HTTP
        option (google.api.http) = {
              post: "/v1/create_user"
              body: "*"
        };
        // 添加摘要、描述
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to create a new user";
          summary: "Create new user";
        };
    };
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
        };
        // 添加摘要、描述
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to login user and get access token & refresh token";
          summary: "Login a user";
        };
    };
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
        // gRPC方法映射到HTTP 
          option (google.api.http) = {
            post: "/v1/update_user"
            body: "*"
        };
        // 添加摘要、描述
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to update user";
          summary: "Update user";
        };
    };
    rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse) {
      option (google.api.http) = {
        get: "/v1/verify_email" // get请求没有body
    };
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        description: "Use this API to verify email";
        summary: "verify email";
      };
    };
}
